--- a/src/templates/screens/admin/AttributeGroup.vm
+++ b/src/templates/screens/admin/AttributeGroup.vm
@@ -1,23 +1,32 @@
-  <div class="app" id="div2-1-4-0">
-        <h2>Add/Edit attribute group  (2.1.4.1)</h2>
+$page.setTitle("Add/Edit attribute group")
+
+<div class="app" id="div2-1-4-0">
+<h2>$page.Title</h2>
+
 #set ($groupId = $data.Parameters.getString("groupId"))
+#set ($issueTypeId = $data.Parameters.getString("issueTypeId"))
 
 <form method="get" action="$link.setPage("admin,AttributeGroup.vm")">
-      <input type="hidden" name="action" value="admin.ModifyModuleAttributes">
-      <input type="hidden" name="nextTemplate" value="admin,AttributeGroup.vm"/>
-      <input type="hidden" name="groupId" value="$groupId">
+<input type="hidden" name="action" value="admin.ModifyModuleAttributes">
+<input type="hidden" name="$scarabG.Constant.NEXT_TEMPLATE" value="admin,AttributeGroup.vm"/>
+<input type="hidden" name="$scarabG.Constant.CANCEL_TEMPLATE" value="admin,ArtifactTypeEdit.vm"/>
+<input type="hidden" name="groupId" value="$groupId">
+#if ($issueTypeId && $issueTypeId.length() > 0)
+<input type="hidden" name="issueTypeId" value="$issueTypeId" />
+#end
 
-<div class="functnbar"><table cellpadding="4" cellspacing="0" border="1">
+<div class="functnbar">
+<table cellpadding="4" cellspacing="0" border="1">
  <tr>
-  <td class="firstchild"><div>
-Screen options
-</div>
-<input type="submit" value="submit changes" name="eventSubmit_doModifygroup" />&#160;<input type="submit" value="Cancel" />
+  <td class="firstchild"><div>Screen options</div>
+<input type="submit" value="Save" name="eventSubmit_doModifygroup" />&#160;
+<input type="submit" value="Cancel" name="eventSubmit_doCancel" />
 </td>
-<td><div>
-Attribute options
-</div>
-<input type="submit" value="Add new"  name="eventSubmit_doGotoattributeselect" />&#160;<input type="submit" value="Copy" />&#160;<input type="submit" value="Delete"  name="eventSubmit_doDeleteattributes" />&#160;<input type="submit" value="Resort" />
+<td nowrap="nowrap"><div>Attributes</div>
+<input type="submit" value="Add new" name="eventSubmit_doGotoattributeselect" />&#160;
+<!-- FIXME: <input type="submit" value="Copy" />&#160; -->
+<input type="submit" value="Delete" name="eventSubmit_doDeleteattributes" />&#160;
+<!-- FIXME: <input type="submit" value="Resort" /> -->
 </td>
 </table>
 </div>
@@ -25,8 +34,8 @@ Attribute options
 <h3>Attribute group details</h3>
 
 #set ($group = $scarabR.getAttributeGroup(groupId))
-#set ($agGroup = $intake.AttributeGroup.mapTo($group) )
-<input type="hidden" name="groupid" value="$groupId" />
+#set ($agGroup = $intake.AttributeGroup.mapTo($group))
+
 <div class="axial">
  <table border="0" cellspacing="2" cellpadding="3">
  <tr>
@@ -34,16 +43,12 @@ Attribute options
  <td><input type="text" size="25" name="$agGroup.Name.Key" value="$!agGroup.Name" /></td>
  </tr>
  <tr>
- <th>Group descr</th>
+ <th>Group desc</th>
  <td><textarea rows="4" cols="40" name="$agGroup.Description.Key">$!agGroup.Description.Value</textarea></td>
- </tr>
- <tr>
- <th>author</th>
- <td><div>Joe Smo</div>
- <a href="#">joes@users.com</a></td>
  </tr>
  </table>
 </div>
+
 #if (!$group.Attributes.isEmpty())
 <h3>Attributes in this group</h3>
 <table width="100%" border="1" cellspacing="2" cellpadding="3">
@@ -58,10 +63,10 @@ Attribute options
 </tr>
 #foreach ($attribute in $group.Attributes)
    #set ($rma = $scarabR.CurrentModule.getRModuleAttribute($attribute))
-   #set ( $rmaGroup = $intake.RModuleAttribute.mapTo($rma) )
+   #set ($rmaGroup = $intake.RModuleAttribute.mapTo($rma))
    #set ($raag = $group.getRAttributeAttributeGroup($attribute))
-   #set ( $raagGroup = $intake.RAttributeAttributeGroup.mapTo($raag) )
-   #set ( $maxNum = $group.Attributes.size() )
+   #set ($raagGroup = $intake.RAttributeAttributeGroup.mapTo($raag))
+   #set ($maxNum = $group.Attributes.size())
  #indexedRows($velocityCount)
  <td>-&nbsp;<input type="checkbox" name="att_delete_$attribute.AttributeId" /></td>
  <td><a href="#">$attribute.Name</a></td>
@@ -74,24 +79,27 @@ Attribute options
  </td>
  </tr>
 #end
-        </table>
+</table>
+
 #else
-        <p>There are no attributes in this group.</p>
+    <p><strong class="alert">There are no attributes in this group.</strong></p>
 #end
-<div class="functnbar2"><table cellpadding="4" cellspacing="0" border="1">
+
+<div class="functnbar">
+<table cellpadding="4" cellspacing="0" border="1">
  <tr>
-  <td class="firstchild">
-  <div>
-Screen options
-</div> <input type="submit" value="Submit changes" name="eventSubmit_doModifygroup" />&#160;<input type="submit" value="Cancel" /></td>
-  <td>
-  <div>
-Attribute options
+  <td class="firstchild"><div>Screen options</div>
+<input type="submit" value="Save" name="eventSubmit_doModifygroup" />&#160;
+<input type="submit" value="Cancel" name="eventSubmit_doCancel" />
+</td>
+<td nowrap="nowrap"><div>Attributes</div>
+<input type="submit" value="Add new" name="eventSubmit_doGotoattributeselect" />&#160;
+<!-- FIXME: <input type="submit" value="Copy" />&#160; -->
+<input type="submit" value="Delete" name="eventSubmit_doDeleteattributes" />&#160;
+<!-- FIXME: <input type="submit" value="Resort" /> -->
+</td>
+</table>
 </div>
-<input type="submit" value="Add new"  name="eventSubmit_doGotoattributeselect" />&#160;<input type="submit" value="Copy" />&#160;<input type="submit" value="Delete"  name="eventSubmit_doDeleteattributes" />&#160;<input type="submit" value="Resort" />
-  </td>
-  </tr>
-  </table>
-</div>
+
 $intake.declareGroups()
 </form>
