removed references to ScarabModule that were all over the code.  Added get/setModule methods that should be used instead of get/setScarabModule. These new methods currently just call the ScarabModule specific methods, but the implementation can be swapped out for one that uses ModuleManager. Will save that work for integration milestone, it should be an easy code change, but I do not want to get into a mess right now, if I am overlooking something.
Issue number:
Obtained from:
Submitted by:
Reviewed by:
Issue number:
Obtained from:
Submitted by:
Reviewed by:

--- a/src/templates/macros/GlobalMacros.vm
+++ b/src/templates/macros/GlobalMacros.vm
@@ -1,7 +1,7 @@
 #macro ( attrValueLeafSelect $attrValue $optionFieldName $size)
   #set ($attrInput = $intake.AttributeValue.mapTo($attrValue))
   #set ($attr = $attrValue.Attribute)
-  #set ($module = $attrValue.Issue.ScarabModule)
+  #set ($module = $attrValue.Issue.Module)
 <select name="$attrInput.get($optionFieldName).Key"
    #if($size.length())size="$size"#end>
   #if ($size.length() == 0)
@@ -22,7 +22,7 @@
   #set ($attrInput = $intake.AttributeValue.mapTo($attrValue))
   #set ($templAttrInput = $intake.AttributeValue.mapTo($templAttrValue))
   #set ($attr = $attrValue.Attribute)
-  #set ($module = $attrValue.Issue.ScarabModule)
+  #set ($module = $attrValue.Issue.Module)
 
   #if ($attrInput.get($optionFieldName).Value)
     #set( $currentValue = $attrInput.get($optionFieldName).Value)
@@ -67,7 +67,7 @@
 #macro ( attrValueHierarchySelect $attrValue $optionFieldName $size)
 #set ($attrInput = $intake.AttributeValue.mapTo($attrValue))
 #set ($attr = $attrValue.Attribute)
-#set ($module = $attrValue.Issue.ScarabModule)
+#set ($module = $attrValue.Issue.Module)
 <select name="$attrInput.get($optionFieldName).Key"
       #if($size.length() != 1)size="$size"#end>
   #if ($size.length() == 0)
@@ -141,7 +141,7 @@
 #macro (userSelectBox $attrValue $size $multiple)
 #set ($attrInput = $intake.AttributeValue.mapTo($attrValue))
 #set ($attr = $attrValue.Attribute)
-#set ($module = $attrValue.Issue.ScarabModule)
+#set ($module = $attrValue.Issue.Module)
 #if ($multiple == "true" || $multiple == "multiple")
 <select name="$attrInput.get("UserIds").Key"
      #if($size.length())size="$size"#end multiple="multiple">
