--- a/src/templates/screens/admin/AttributeSelect.vm
+++ b/src/templates/screens/admin/AttributeSelect.vm
@@ -1,86 +1,92 @@
+$page.setTitle("Select global attribute")
 
-$page.setTitle("Global Attribute Select")
-        
+#macro (AttributeSelectBar $val)
+<div class="functnbar$val">
+<table cellpadding="4" cellspacing="0" border="1">
+#if ($allAttributes.size() == 0)
+<tr>
+<td class="firstchild" nowrap="nowrap">
+<div>General functions</div>
+#if ($security.hasPermission("Domain | Edit", $scarabR.CurrentModule))
+<input type="submit" value="Create new" name="eventSubmit_doCreatenewglobalattribute"/>
+ &#160;
+#end
+<input type="submit" value="Cancel" name="eventSubmit_doCancel" />
+</td>
+</tr>
+#else
+<tr>
+<td class="firstchild">
+<div>Select items to</div>
+<input type="submit" value="Add to attribute group" name="eventSubmit_doSelectattribute" />
+</td>
+<td nowrap="nowrap">
+<div>General functions</div>
+#if ($security.hasPermission("Domain | Edit", $scarabR.CurrentModule))
+<input type="submit" value="Create new" name="eventSubmit_doCreatenewglobalattribute"/>
+ &#160;
+#end
+<input type="submit" value="Cancel" name="eventSubmit_doCancel" />
+</td>
+</tr>
+#end
+</table>
+</div>
+#end
+
+<div class="app" id="globalAttributeSelect">
+
+<h2>$page.Title</h2>
+
 <form action="$link.setPage("admin,GlobalAttributeSelect.vm")" method="get">
-    <input type="hidden" name="action" value="admin.ModifyModuleAttributes">
-    <input type="hidden" name="groupId" value = "$data.Parameters.getString("groupId")")
+<input type="hidden" name="action" value="admin.ModifyModuleAttributes" />
+<input type="hidden" name="groupId" value="$data.Parameters.getString("groupId","").trim()" />
+<input type="hidden" name="issueTypeId" value="$data.Parameters.getString("issueTypeId","").trim()" />
+<input type="hidden" name="$scarabG.Constant.CANCEL_TEMPLATE" value="admin,AttributeGroup.vm" />
 
-        <div class="tabs">
-            <table cellpadding="3" cellspacing="0" border="0">
-            <tr>
-            <th>global attributes</th>
-            <td><a href="#" title="Customize 'enter issue'">Customize "enter issue"</a></td>
-            </tr>
-            </table>
-        </div>
-
-
-        <div class="functnbar">
-            <table cellpadding="0" cellspacing="0" border="0">
-            <tr>
-            <td><strong>select items to:</strong></td>
-            <td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
-            <td><strong>general functions</strong></td>
-            </tr>
-            <tr>
-            <td><input type="submit" value="add to 'Enter issue page'" name="eventSubmit_doSelectattribute" />&nbsp;</td>
-            <td>
-            #if ($security.hasPermission("Domain | Edit", $scarabR.CurrentModule))
-               <input type="submit" value="create new" />
-            #end
-            &nbsp;<input type="submit" value="cancel" name="eventSubmit_doCancel" /></td>
-
-            </tr>
-            </table>
-        </div>
-        
-        
-        <h3>Global attributes</h3>
-        
-        <table width="100%" border="1" cellspacing="2" cellpadding="3">
-        <tr>
-        <th nowrap="nowrap"><a href="#"><img src="../csi/images/icon_uparrow_off.gif" width="13" height="8" alt="sort ascending" border="0" /></a><img src="../csi/images/icon_downarrow_on.gif" width="13" height="8" alt="sort descending" border="0" /></th>
-        <th><a href="#" title="sort">input type</a></th>
-        <th><a href="#" title="sort">attribute name</a></th>
-        <th><a href="#" title="sort">description</a></th>
-        <th><a href="#" title="sort">author</a></th>
-        <th><a href="#" title="sort">creation date</a></th>
-        </tr>
-        
 #set ($allAttributes = $scarabR.CurrentModule.AvailableAttributes)
 
-#foreach( $attribute in $allAttributes )
-        #rows()
-        <td><input type="radio" name="attributeId" value="$attribute.AttributeId" /></td>
-        <td>$attribute.AttributeType.Name</td>
-        <td><a href="#">$attribute.Name</a></td>
-        <td>$attribute.Description</td>
-        #set ($createdUser = $scarabR.getUser($attribute.CreatedBy) )
-        <td><a href="mailTo:$createdUser.Email">$createdUser.FirstName $createdUser.LastName</a></td>
-        <td>$format.getDate($scarabG.DateFormat, $attribute.CreatedDate)</td>
-        </tr>
+#AttributeSelectBar("")
+
+#if ($allAttributes.size() == 0)
+
+<p><strong class="alert">There are no more global attributes that are not already
+associated with an attribute group in this module.</strong></p>
+
+#else
+
+<h3>Global attributes</h3>
+
+<table width="100%" border="1" cellspacing="2" cellpadding="3">
+<tr>
+<th nowrap="nowrap">
+<img src="$data.Request.ContextPath/images/icon_uparrow_off.gif" width="13" height="8" alt="sort ascending" title="sort ascending" border="0" />
+<img src="$data.Request.ContextPath/images/icon_downarrow_on.gif" width="13" height="8" alt="sort descending" title="sort descending" border="0" />
+</th>
+<th>Input type</th>
+<th>Attribute name</th>
+<th>Description</th>
+<th>Author</th>
+<th>Creation date</th>
+</tr>
+
+#foreach ($attribute in $allAttributes)
+ #indexedRows($velocityCount)
+  <td><input type="radio" name="attributeId" value="$attribute.AttributeId" /></td>
+  <td>$attribute.AttributeType.Name</td>
+  <td>$attribute.Name</td>
+  <td>$attribute.Description</td>
+  #set ($createdUser = $scarabR.getUser($attribute.CreatedBy))
+  <td><a href="mailTo:$createdUser.Email">$createdUser.FirstName $createdUser.LastName</a></td>
+  <td>$format.getDate($scarabG.DateFormat, $attribute.CreatedDate)</td>
+ </tr>
 #end
-        </table>
+</table>
 
+#end
 
-        
-        <div class="functnbar">
-            <table cellpadding="0" cellspacing="0" border="0">
-            <tr>
-            <td><strong>select items to:</strong></td>
-            <td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
-            <td><strong>general functions</strong></td>
-            </tr>
-            <tr>
-            <td><input type="submit" value="add to 'Enter issue page'" name="eventSubmit_doSelectattribute" />&nbsp;</td>
-            <td>
-            #if ($security.hasPermission("Domain | Edit", $scarabR.CurrentModule))
-               <input type="submit" value="create new" />
-            #end
-            &nbsp;<input type="submit" value="cancel" name="eventSubmit_doCancel" /></td>
+#AttributeSelectBar("2")
 
-            </tr>
-            </table>
-        </div>
-        
-    </div>
+</form>
+
+</div>
