Added global Artifact Type Editor, GlobalArtifactTypeShow. From here you can add another global artifact type via the ArtifactTypeCreate screen. Now the Manage ArtifactTypes screen, which shows values for this module-artifacttype, shows the display name instead of artifact type name (the name for this artifact type in this module). The ArtifactTypeEdit screen allows you to edit the display name and display description.

--- a/src/templates/screens/admin/ArtifactTypeSelect.vm
+++ b/src/templates/screens/admin/ArtifactTypeSelect.vm
@@ -28,11 +28,7 @@ $page.setTitle("Artifact Type Select")
 <h3>Artifact Types</h3>
 
     <p><strong class="alert">
-    There are no more artifact types to add to this module. 
-    #if ($security.hasPermission("Domain | Edit", $scarabR.CurrentModule))
-    Please click the Create new button to create a new artifact type.
-    #end</strong>
-    </p>
+    There are no more artifact types to add to this module.</strong></p>
 
 <div class="functnbar2">
     <table cellpadding="4" cellspacing="0" border="1">
