--- a/src/templates/screens/admin/ArtifactTypeEdit.vm
+++ b/src/templates/screens/admin/ArtifactTypeEdit.vm
@@ -1,11 +1,15 @@
 $page.setTitle("Attribute Editor")
 
 #set ($module = $scarabR.CurrentModule)
-#set ($moduleGroup = $intake.Module.mapTo($module))
 #set ($issueType = $scarabR.IssueType)
 #set ($issueTypeId = $data.Parameters.getString("issueTypeId"))
-#set ($issueTypeGroup = $intake.IssueType.mapTo($issueType))
 #set ($groups = $issueType.getAttributeGroups($module))
+#set ( $rmit= $module.getRModuleIssueType($issueType))
+#set ( $rmitGroup = $intake.RModuleIssueType.mapTo($rmit) )
+
+#if (!$issueType)
+Nope
+#end
 
 <div class="app" id="div2-1-4-0">
 
@@ -15,23 +19,17 @@ $page.setTitle("Attribute Editor")
 <input type="hidden" name="action" value="admin.ModifyModuleAttributes" />
 <input type="hidden" name="$scarabG.Constant.NEXT_TEMPLATE" value="admin,ArtifactTypeEdit.vm" />
 <input type="hidden" name="$scarabG.Constant.CANCEL_TEMPLATE" value="admin,ManageArtifactTypes.vm" />
-#if ($issueTypeId && $issueTypeId.length() > 0)
 <input type="hidden" name="issueTypeId" value="$issueTypeId" />
-#end
 
 <div class="functnbar">
     <table cellpadding="4" cellspacing="0" border="1">
     <tr>
     <td class="firstchild">
     <div>Screen options:</div>
-#if ($issueTypeId && $issueTypeId.length() > 0)
       <input type="submit" value="Save" name="eventSubmit_doModifyissuetype" />&#160;
-#else
-      <input type="submit" value="Create" name="eventSubmit_doModifyissuetype" />&#160;
-#end
       <input type="submit" value="Cancel" name="eventSubmit_doCancel"  />
     </td>
-#if ($issueTypeId && $issueTypeId.length() > 0 && !$groups.isEmpty())
+#if (!$groups.isEmpty())
     <td nowrap="nowrap">
     <div>Attribute group options:</div>
       <input type="submit" value="Add new" name="eventSubmit_doCreatenewgroup" />&#160;
@@ -43,17 +41,22 @@ $page.setTitle("Attribute Editor")
   </tr>
   </table>
 </div>
-
 <h3>Artifact type details</h3>
 <div class="axial">
     <table border="0" cellspacing="2" cellpadding="3">
     <tr>
     <th>Artifact type name</th>
-    <td><input type="text" size="25" name="$issueTypeGroup.Name.Key" value="$!issueTypeGroup.Name.Value" /></td>
+    <td><input type="text" size="25" name="$rmitGroup.DisplayName.Key" 
+      #if ($rmitGroup.DisplayName.Value.toString().length() != 0)
+          value="$rmitGroup.DisplayName.Value"/>
+      #else
+          value="$issueType.Name"/>
+      #end
+    </td>
     </tr>
     <tr>
     <th>Artifact type desc</th>
-    <td><textarea rows="4" cols="40" name="$issueTypeGroup.Description.Key">$!issueTypeGroup.Description.Value</textarea></td>
+    <td><textarea rows="4" cols="40" name="$rmitGroup.DisplayDesc.Key">#if($rmitGroup.DisplayDesc.Value.toString().length() != 0)$rmitGroup.DisplayDesc.Value#else$!issueType.Description#end</textarea></td>
     </tr>
     </table>
 </div>
@@ -109,7 +112,7 @@ a seperate page).
  <tr>
    <td>&#160;</td>
    <td>Duplicate check</td>
-   <td>#booleanCheckbox ($moduleGroup.Dedupe)</td>
+   <td>#booleanCheckbox ($module.Dedupe)</td>
    <td>#numericSelect("dupe_order" 1 $maxNum $issueDedupeSequence 1)</td>
  </tr>
  #end
@@ -134,14 +137,10 @@ a seperate page).
     <tr>
     <td class="firstchild">
     <div>Screen options:</div>
-#if ($issueTypeId && $issueTypeId.length() > 0)
       <input type="submit" value="Save" name="eventSubmit_doModifyissuetype" />&#160;
-#else
-      <input type="submit" value="Create" name="eventSubmit_doModifyissuetype" />&#160;
-#end
       <input type="submit" value="Cancel" name="eventSubmit_doCancel"  />
     </td>
-#if ($issueTypeId && $issueTypeId.length() > 0 && !$groups.isEmpty())
+#if (!$groups.isEmpty())
     <td nowrap="nowrap">
     <div>Attribute group options:</div>
       <input type="submit" value="Add new" name="eventSubmit_doCreatenewgroup" />&#160;
