--- a/src/templates/screens/admin/ArtifactTypeEdit.vm
+++ b/src/templates/screens/admin/ArtifactTypeEdit.vm
@@ -73,21 +73,21 @@ Nope
 
 <p>
 <input type="checkbox" checked="checked" />&#160;Show&#160;
-<select class="select">
-<option>5</option>
-<option>10</option>
-<option>15</option>
-<option>20</option>
+<select class="select" name="$rmitGroup.Comments.Key">
+<option #if ($rmitGroup.Comments.Value == 5) selected="selected" #end>5</option>
+<option #if ($rmitGroup.Comments.Value == 10) selected="selected" #end>10</option>
+<option #if ($rmitGroup.Comments.Value == 15) selected="selected" #end>15</option>
+<option #if ($rmitGroup.Comments.Value == 20) selected="selected" #end>20</option>
 </select>
 most recent artifact instance history entries (otherwise, a link will
 appear leading to a seperate page).
 </p>
 <p><input type="checkbox" checked="checked" />&#160;Show&#160;
-<select class="select">
-<option>5</option>
-<option>10</option>
-<option>15</option>
-<option>20</option>
+<select class="select" name="$rmitGroup.History.Key">
+<option #if ($rmitGroup.History.Value == 5) selected="selected" #end>5</option>
+<option #if ($rmitGroup.History.Value == 10) selected="selected" #end>10</option>
+<option #if ($rmitGroup.History.Value == 15) selected="selected" #end>15</option>
+<option #if ($rmitGroup.History.Value == 20) selected="selected" #end>20</option>
 </select>
 most recent artifact instance comments (otherwise, a link will appear to
 a seperate page).
