--- a/src/templates/navigations/Default.vm
+++ b/src/templates/navigations/Default.vm
@@ -22,7 +22,11 @@
 <div><small><strong>Artifact Types</strong></small>
 #foreach($issueType in $issueTypes)
 <div><small>
+  #if ($issueType.equals($scarabR.CurrentIssueType))
+<b>$issueType.Name</b>
+  #else
 <a href="$link.setPage("SelectArtifactType.vm")">$issueType.Name</a>
+   #end
 </small></div>
 #end
 </div>
