added GlobalAttributeShow admin page

--- a/src/templates/screens/Links.vm
+++ b/src/templates/screens/Links.vm
@@ -27,6 +27,9 @@ $page.setTitle("Scarab Links")
 <h3>Admin Pages</h3>
 <ul>
 <li>
+ <a href="$link.setPage("admin,GlobalArtifactTypeShow.vm")">admin,GlobalArtifactTypeShow.vm</a>
+</li>
+<li>
  <a href="$link.setPage("admin,ManageArtifactTypes.vm")">admin,ManageArtifactTypes.vm</a>
 </li>
 <li>
