changes to pass Issue Type to methods to get module-attributes.

--- a/src/templates/screens/Search.vm
+++ b/src/templates/screens/Search.vm
@@ -23,8 +23,9 @@ $page.setTitle("Custom Search")
 
 #set ($search = $scarabR.Search)
 #set ($searchGroup = $intake.SearchIssue.mapTo($search))
-#set ($searchTextAttributes = $search.QuickSearchTextAttributeValues)
-#set ($searchValues = $search.QuickSearchOptionAttributeValues)
+#set ($issueType = $scarabR.CurrentIssueType)
+#set ($searchTextAttributes = $search.getQuickSearchTextAttributeValues($issueType))
+#set ($searchValues = $search.getQuickSearchOptionAttributeValues($issueType))
 #if ($searchTextAttributes.size() != 0)
 <h3>Text search</h3>
 
