--- a/src/templates/screens/ViewIssue.vm
+++ b/src/templates/screens/ViewIssue.vm
@@ -25,7 +25,7 @@ You are viewing an issue in a different Module than is currently selected.
 
 #if ($currentIssue)
 
- #set ($attrValues = $currentIssue.ModuleAttributeValuesMap)
+ #set ($attrValues = $currentIssue.getModuleAttributeValuesMap($scarabR.CurrentIssueType))
  <form method="post" action="$link.setPage("ViewIssue.vm").setAction("ModifyIssue")">
    <input type="hidden" name="$scarabG.Constant.NEXT_TEMPLATE" value="ViewIssue.vm" />
 
