--- a/src/templates/screens/entry/Wizard3.vm
+++ b/src/templates/screens/entry/Wizard3.vm
@@ -2,12 +2,12 @@ $page.setTitle("Enter issue")
 
 #set ($issue = $scarabR.ReportingIssue)
 #set ($action = $link.setPage("entry,Wizard3.vm").setAction("ReportIssue").toString())
-#set ($attrValues = $issue.ModuleAttributeValuesMap)
+#set ($attrValues = $issue.getModuleAttributeValuesMap($scarabR.CurrentIssueType))
 #set ($module = $scarabR.CurrentModule)
 #set ($user = $data.User)
 #set ($templateId = $data.Parameters.getString("templateId"))
 #set ($template = $scarabR.getIssue($templateId))
-#set ($templAttrValues = $template.ModuleAttributeValuesMap)
+#set ($templAttrValues = $template.getModuleAttributeValuesMap($scarabR.CurrentIssueType))
 
 <div class="app" id="div2-1-0">
 
