--- a/src/templates/screens/MoveIssue.vm
+++ b/src/templates/screens/MoveIssue.vm
@@ -24,7 +24,7 @@ $page.setTitle("Copy/move issue")
 <form method="post" action="$link.setPage("MoveIssue.vm").setAction("MoveIssue")">
 <input type="hidden" name="$moveIssueGroup.IssueId.key" value="$issueId" />
 ## need to also pass id so that if we re-display this page, the right value is kept around
-<input type="hidden" name="id" value="$issueId" />
+<input type="hidden" name="issueId" value="$issueId" />
 <input type="hidden" name="$scarabG.Constant.NEXT_TEMPLATE" value="MoveIssue2.vm" />
 
 <h3>Issue to be copied/moved</h3>
