--- a/src/templates/screens/entry/Wizard1.vm
+++ b/src/templates/screens/entry/Wizard1.vm
@@ -3,7 +3,9 @@ $page.setTitle("Enter issue")
 <div id="wizard1" class="app">
 
 #set ($issue = $scarabR.ReportingIssue)
-#set ($attrValues = $issue.ModuleAttributeValuesMap)
+#set ($issueType = $scarabR.CurrentIssueType)
+#set ($attrValues = $issue.getModuleAttributeValuesMap($issueType))
+$attrValues
 #set ($module = $scarabR.CurrentModule)
 #set ($user = $data.User)
 
@@ -65,7 +67,7 @@ $page.setTitle("Enter issue")
 <table cellpadding="3" cellspacing="2" border="0">
 #foreach ( $attKey in $attrValues.sequence() )
   #set ( $attVal = $attrValues.get($attKey) )
-  #if ($attVal.isDedupeAttribute())
+  #if ($attVal.isDedupeAttribute($issueType))
   <tr>
    <th>
      #if ( $attVal.Attribute.AttributeType.ValidationKey )
