these pages (m1) have been updated with a functional (for standalone only) nav system... some changes have been made to the style sheet for the UI screens that will need to be included in the production style sheet:
1. vertical spacing has been added to "navcolumn div" and "navcolumn div div"
2. a new class was created, "modulenav", to accomodate the module state indicator (the white bar at the top of the page that provides users a link back to the module home and to the module index)

There are a couple of other tweaks, which todd is tracking, that represent the delta of the SC1.2 css and Scarab css...

PLEASE NOTE: these screens are not built with production grade HTML. I have been updating them myself, and thus there are numerous inconsistencies... although, I have definitely come a long way in coding HTML to our DTD - and I am even starting to get a little creative with CSS... ouch.

I will be on vacation from tomorrow thru next week - bringing my laptop so you can still stay in touch, update me with status, ask questions: please feel free!!

Brian

--- a/www/ui/csi/style/main.css
+++ b/www/ui/csi/style/main.css
@@ -127,9 +127,15 @@ dd	{
  margin-bottom: .67em
  }
 #navcolumn div div {
- padding-left: 1em;
- margin-bottom: 0
- }
+    margin-top: .5em;
+    padding-left: 1em;
+    margin-bottom: 0
+    }
+#navcolumn div div div {
+    margin-top: .2em;
+    padding-left: 1.2em;
+    margin-bottom: 0
+    }
 #banner, #banner td { 
 	background: #369;
 	color: white;
@@ -141,6 +147,15 @@ body #banner #login a {
 	color: white;
 	padding: .25em;
 	margin: 0;
+	}
+#modulenav {
+	background-color: #fff;
+	padding: .1em;
+	margin: 0;
+	border-bottom: 2px solid #666 
+	}
+#modulenav td {
+	align: right 
 	}
 .tabs th {
 	color: black;
