--- a/src/templates/screens/SaveTemplate.vm
+++ b/src/templates/screens/SaveTemplate.vm
@@ -36,7 +36,7 @@ $page.setTitle("Issue template")
 </tr>
 <tr>
   <th width="120">Availability</th>
-  <td>#templateTypeSelectBox ($issue)</td>
+  <td>#templateTypeSelectBox ($templateInfo)</td>
 </tr>
 <tr>
   <th width="120">Current module</th>
@@ -63,7 +63,7 @@ $page.setTitle("Issue template")
 
 <div class="axial">
  <table cellspacing="2" cellpadding="3" border="0">
-#set ($attrValues = $issue.ModuleAttributeValuesMap)
+#set ($attrValues = $issue.getModuleAttributeValuesMap($scarabR.CurrentIssueType))
 #set ($group = $intake.AttributeValue.mapTo($attrValue))
 #foreach ($attKey in $attrValues.sequence())
   #set ($attVal = $attrValues.get($attKey))
