--- a/src/templates/screens/ViewIssue.vm
+++ b/src/templates/screens/ViewIssue.vm
@@ -10,6 +10,7 @@ $page.setTitle("View Issue")
 
 #set ($currentIssue = $scarabR.getIssue($currentIssueId))
 #set ($fullHistory = $data.Parameters.getString("fullhistory",""))
+#set ($fullComments = $data.Parameters.getString("fullcomments",""))
 #set ($currentIssueModuleId = $currentIssue.ModuleId)
 #set ($currentModule = $scarabR.CurrentModule)
 #set ($currentModuleId = $currentModule.ModuleId)
