--- a/src/templates/screens/entry/Wizard3.vm
+++ b/src/templates/screens/entry/Wizard3.vm
@@ -4,6 +4,7 @@ $page.setTitle("Enter issue")
 #set ($action = $link.setPage("entry,Wizard3.vm").setAction("ReportIssue").toString())
 #set ($attrValues = $issue.getModuleAttributeValuesMap($scarabR.CurrentIssueType))
 #set ($module = $scarabR.CurrentModule)
+#set ($issueType = $scarabR.CurrentIssueType)
 #set ($user = $data.User)
 #set ($templateId = $data.Parameters.getString("templateId"))
 #set ($template = $scarabR.getIssue($templateId))
@@ -24,8 +25,8 @@ $page.setTitle("Enter issue")
 </div>
 
 <form method="get" action="$action">
-#set ($privateTemplateList = $module.getPrivateTemplates($user))
-#set ($globalTemplateList = $module.GlobalTemplates)
+#set ($privateTemplateList = $module.getPrivateTemplates($user,$issueType))
+#set ($globalTemplateList = $module.getGlobalTemplates($issueType))
 #if ($privateTemplateList.size() > 0 || $globalTemplateList.size() > 0)
  <h3>Apply issue entry template</h3>
  <div class="axial">
@@ -42,7 +43,7 @@ $page.setTitle("Enter issue")
  #end
       </select> 
       &#160;<input type="submit" value="Select" name="eventSubmit_doGotowizard3" /> 
-      &#160;<a href="#">template list</a>
+      &#160;<a href="$link.setPage("TemplateList.vm")">template list</a>
       </td>
       </tr>
       </table>
