--- a/src/templates/screens/reports/Step3_2a.vm
+++ b/src/templates/screens/reports/Step3_2a.vm
@@ -1,26 +1,12 @@
 #set ($report = $scarabR.Report)
 #set ($intakeReport = $intake.Report.mapTo($report))
 #set ($action = $link.setPage("reports,Step3_2a.vm").setAction("GenerateReport").addPathInfo("$scarabG.Constant.NEXT_TEMPLATE", "reports,Step3_2b.vm").toString())
+
 <div class="app" id="div2-4-1-step4b">
 <h2>Define report (2.4.1)</h2>
-  <div class="tabs">
-   <table cellpadding="3" cellspacing="0" border="0">
-   <tr>
-   <td>1: <a href="#" title="summary info">Summary info</a></td>
-   <td>2: <a href="#" title="primary filter attribute">Primary filter attribute (PFA)</a></td>
-   <th>3: Select row/column heading(s)</th>
-   </tr>
-   </table>
-  </div>
-<div class="functnbar">
-<table cellpadding="4" cellspacing="0" border="1">
- <tr>
-  <td class="firstchild">3a: Define row/column criteria |
-    3b: Select row/column content
-</td>
-  </tr>
- </table>
-</div>
+#wizardLinks("reports,Step3_2a.vm" $reportParameters $link)
+#subWizardLinks("reports,Step3_2a.vm" $reportParameters $link "3a: Define row/column criteria" "reports,Step3_2a.vm" "3b: Select row/column content" "reports,Step3_2b.vm")
+
 <h3>Report content: Rate of change analysis</h3>
 <form method="get" action="$action">
 <div class="axial">
@@ -30,9 +16,8 @@
    <td>
 <select name="$intakeReport.Axis1Category.Key">
     <option value="">select criteria</option>
-#set ($options = $scarabR.Report.AxisCategories)
-#foreach ( $option in $options )
-      <option value="$option.Value">$option.Name</option>
+#foreach ( $option in $scarabR.Report.Axis1Categories )
+    #option($option)
 #end
 </select>
 </td>
@@ -54,6 +39,7 @@
  </table>
 </div>
 #addReportHiddenInputs($report $link.CurrentView)
+##addReportHiddenInputs($reportParameters)
 $intake.declareGroups()
 </form>
 </div>
