remove commented out code Issue number: Obtained from: Submitted by: Reviewed by:

--- a/src/templates/screens/reports/Step3_2a.vm
+++ b/src/templates/screens/reports/Step3_2a.vm
@@ -38,8 +38,7 @@
   </tr>
  </table>
 </div>
-#addReportHiddenInputs($report $link.CurrentView)
-##addReportHiddenInputs($reportParameters)
+#addReportHiddenInputs($report "reports,Step3_2a.vm")
 $intake.declareGroups()
 </form>
 </div>
